--- a/1. madex/madex_example_dna.ipynb
+++ b/1. madex/madex_example_dna.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "from torchtext import datasets, data\n",
     "import numpy as np\n",
@@ -25,7 +34,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "device = torch.device(\"cuda:0\")"
+    "device = torch.device(\"cpu\")"
    ]
   },
   {
@@ -37,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -79,14 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 60/60 [00:02<00:00, 29.46it/s]\n"
+      "100%|██████████| 60/60 [00:01<00:00, 35.80it/s]\n"
      ]
     }
    ],
@@ -97,14 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0046 test loss, 16.0 seconds elapsed\n"
+      "0.0046 test loss, 7.3 seconds elapsed\n"
      ]
     }
    ],
@@ -116,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -130,11 +139,11 @@
       "3  ('C_11', 'A_12', 'C_13', 'G_14', 'T_15', 'G_16', 'A_21')\n",
       "4  ('C_11', 'A_12', 'C_13', 'G_14', 'T_15', 'G_16', 'T_18')\n",
       "5  ('A_21', 'C_25', 'C_26')\n",
-      "6  ('A_21', 'T_23', 'C_25', 'C_26')\n",
+      "6  ('A_21', 'C_25', 'C_26', 'T_28')\n",
       "7  ('A_21', 'T_23', 'C_25', 'C_26', 'T_28')\n",
-      "8  ('A_2', 'C_11', 'A_12', 'C_13', 'G_14', 'T_15', 'G_16', 'T_18')\n",
-      "9  ('A_2', 'A_6', 'C_11', 'A_12', 'C_13', 'G_14', 'T_15', 'G_16', 'T_18')\n",
-      "10  ('A_2', 'A_6', 'C_11', 'A_12', 'C_13', 'G_14', 'T_15', 'G_16', 'T_18', 'C_20')\n"
+      "8  ('C_11', 'A_12', 'C_13', 'G_14', 'T_15', 'G_16', 'T_18', 'C_20')\n",
+      "9  ('C_11', 'A_12', 'C_13', 'G_14', 'T_15', 'G_16', 'T_18', 'C_20', 'A_31')\n",
+      "10  ('A_2', 'C_11', 'A_12', 'C_13', 'G_14', 'T_15', 'G_16', 'T_18', 'C_20', 'A_31')\n"
      ]
     }
    ],
@@ -152,13 +161,20 @@
     "    print(rank+1, postfix, tuple(a + \"_\" + str(b) for a,b in inter_verbose))\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:torch]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-torch-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -170,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
